--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,6 +19,8 @@
           href="{% static 'assets/img/tourism_festival.png' %}" />
     <!-- Core theme CSS (includes Bootstrap) -->
     <link href={% static 'css/styles.css' %} rel="stylesheet" />
+    {% block bloque_estilos %}
+    {% endblock bloque_estilos %}
   </head>
   <body>
     {% load static %}
@@ -47,7 +49,7 @@
             </li>
             {% if request.user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">Mensajes</a>
+                <a class="nav-link" href="{% url 'mensajes:home' %}">Mensajeria</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle"
@@ -63,7 +65,7 @@
                     <a class="dropdown-item" href="{% url 'posteos:posteo_create' %}">Nuevo Posteo</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="{% url 'usuarios:login' %}">Buscar Posteo</a>
+                    <a class="dropdown-item" href="{% url 'posteos:posteo_buscar' %}">Buscar Posteo</a>
                   </li>
                 </ul>
               </li>
@@ -132,5 +134,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS -->
     <script src={% static 'js/scripts.js' %}></script>
+ 
   </body>
 </html>
