Se agrego iniciar conversacion

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -116,6 +116,8 @@
     </nav>
     <!-- Header -->
     {% block bloque_header %}
+    {% block bloque_sub_header %}
+    {% endblock bloque_sub_header %}
     {% endblock bloque_header %}
     <!-- Page Content -->
     {% block bloque_contenido %}
