--- a/mensajes/templates/mensajes/mensajes_list.html
+++ b/mensajes/templates/mensajes/mensajes_list.html
@@ -1,7 +1,9 @@
 {% extends 'core/base.html' %}
+
 {% block bloque_titulo %}
     Listado de mensajes
 {% endblock bloque_titulo %}
+
 {% block bloque_estilos %}
 <style>
     body {
@@ -9,13 +11,13 @@
         background-color: #f2f2f2;
     }
     .detalle-conversacion {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
     h1 {
         font-size: 24px;
         margin-bottom: 20px;
@@ -23,24 +25,58 @@
     .conversacion {
         padding: 10px;
         border-bottom: 1px solid #ddd;
+        display: flex;
+        align-items: center;
     }
     .conversacion a {
         color: #333;
         text-decoration: none;
+        margin-left: 10px;
     }
     .conversacion a:hover {
         text-decoration: underline;
     }
+    .avatar {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    .nuevo-conversacion {
+        margin-top: 20px;
+        text-align: center;
+    }
+    .nuevo-conversacion a {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+    .nuevo-conversacion a:hover {
+        background-color: #0056b3;
+    }
 </style>
 {% endblock bloque_estilos %}
+
 {% block bloque_contenido %}
 <div class="detalle-conversacion">
     <h1>Mis Conversaciones</h1>
     {% for intercambio in intercambios %}
     <div class="conversacion">
         <img src="{{ intercambio.user_2.userextension.avatar.url }}" alt="Avatar" class="avatar">
-        <a href="{% url 'mensajes:detalle_conversacion' intercambio.id %}">{{ intercambio.user_2.username }}</a>
+        {% if intercambio.user_1 == request.user %}
+            <a href="{% url 'mensajes:detalle_conversacion' intercambio.id %}">{{ intercambio.user_2.username }}</a>
+        {% else %}
+            <a href="{% url 'mensajes:detalle_conversacion' intercambio.id %}">{{ intercambio.user_1.username }}</a>
+        {% endif %}
     </div>
     {% endfor %}
+    
+    <div class="nuevo-conversacion">
+        <a href="{% url 'mensajes:iniciar_conversacion' %}" class="btn btn-primary">Iniciar nueva conversación</a>
+    </div>
 </div>
 {% endblock bloque_contenido %}
