Arreglos de diseño[

--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -11333,7 +11333,7 @@ textarea.form-control-lg {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+  background: url("../assets/img/7489233.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 6rem;
   padding-bottom: 6rem;
