--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,14 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-      {% block bloque_titulo %}
-      {% endblock bloque_titulo %}
+        {% block bloque_titulo %}
+        {% endblock bloque_titulo %}
     </title>
     <!-- Bootstrap icons -->
     <link rel="stylesheet"
@@ -18,124 +18,128 @@
           type="image/x-icon"
           href="{% static 'assets/img/tourism_festival.png' %}" />
     <!-- Core theme CSS (includes Bootstrap) -->
-    <link href={% static 'css/styles.css' %} rel="stylesheet" />
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     {% block bloque_estilos %}
     {% endblock bloque_estilos %}
-  </head>
-  <body>
-    {% load static %}
-    <nav style="background-color: coral;
-                color: black;
-                font-weight: bold;
-                height: 80px"
-         class="navbar navbar-expand-lg navbar-light ">
-      <div class="container-fluid">
-        <a class="navbar-brand px-5 " href="#">Mis Contenidos</a>
-        <button class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto py-4 py-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active"
-                 aria-current="page"
-                 href="{% url 'core:home' %}">Inicio</a>
-            </li>
-            {% if request.user.is_authenticated %}
+</head>
+<body>
+{% load static %}
+<nav style="background-color: coral;
+            color: black;
+            font-weight: bold;
+            height: 80px"
+     class="navbar navbar-expand-lg navbar-light ">
+  <div class="container-fluid">
+    <a class="navbar-brand px-5 " href="{% url 'core:home' %}">Mis Contenidos</a>
+    <button class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto py-4 py-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active"
+             aria-current="page"
+             href="{% url 'core:home' %}">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"
+             href="{% url 'core:about' %}">Acerca de mi</a>
+        </li>
+        {% if request.user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'mensajes:home' %}">Mensajeria</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">Posteos</a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="{% url 'posteos:home' %}">Ver Posteos</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'posteos:posteo_create' %}">Nuevo Posteo</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'posteos:posteo_buscar' %}">Buscar Posteo</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">{{ request.user.username }}</a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="{% url 'usuarios:ver_perfil' %}">Ver perfil</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Editar perfil</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'mensajes:home' %}">Mensajeria</a>
+                <form action="{% url 'usuarios:logout' %}" method="post">
+                  {% csrf_token %}
+                  <button type="submit" class="dropdown-item">Logout</button>
+                </form>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"
-                   href="#"
-                   role="button"
-                   data-bs-toggle="dropdown"
-                   aria-expanded="false">Posteos</a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="{% url 'posteos:home' %}">Ver Posteos</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{% url 'posteos:posteo_create' %}">Nuevo Posteo</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{% url 'posteos:posteo_buscar' %}">Buscar Posteo</a>
-                  </li>
-                </ul>
+            </ul>
+          </li>
+        {% else %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">Users</a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="{% url 'usuarios:register' %}">Registrarme</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"
-                   href="#"
-                   role="button"
-                   data-bs-toggle="dropdown"
-                   aria-expanded="false">{{ request.user.username }}</a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="{% url 'usuarios:ver_perfil' %}">Ver perfil</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Editar perfil</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li class="nav-item">
-                    <form action="{% url 'usuarios:logout' %}" method="post">
-                      {% csrf_token %}
-                      <button type="submit" class="dropdown-item">Logout</button>
-                    </form>
-                  </li>
-                </ul>
+              <li>
+                <a class="dropdown-item" href="{% url 'usuarios:login' %}">Login</a>
               </li>
-            {% else %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"
-                   href="#"
-                   role="button"
-                   data-bs-toggle="dropdown"
-                   aria-expanded="false">Users</a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="{% url 'usuarios:register' %}">Registrarme</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="{% url 'usuarios:login' %}">Login</a>
-                  </li>
-                </ul>
-              </li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Header -->
-    {% block bloque_header %}
-    {% block bloque_sub_header %}
-    {% endblock bloque_sub_header %}
-    {% endblock bloque_header %}
-    <!-- Page Content -->
-    {% block bloque_contenido %}
-    {% endblock bloque_contenido %}
-    <!-- Footer -->
-    <footer style="background-color: coral;
-                   color: black;
-                   font-weight: bold;
-                   height: 80px"
-            class="footer mt-auto py-3 fixed-bottom ">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Mariano Pisano - Entrega Final (2024)</p>
-      </div>
-    </footer>
-    <!-- Bootstrap core JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS -->
-    <script src={% static 'js/scripts.js' %}></script>
- 
-  </body>
+            </ul>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- Header -->
+{% block bloque_header %}
+{% block bloque_sub_header %}
+{% endblock bloque_sub_header %}
+{% endblock bloque_header %}
+<!-- Page Content -->
+{% block bloque_contenido %}
+{% endblock bloque_contenido %}
+<!-- Footer -->
+<footer style="background-color: coral;
+               color: black;
+               font-weight: bold;
+               height: 80px"
+        class="footer mt-auto py-3 fixed-bottom ">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Mariano Pisano - Entrega Final (2024)</p>
+  </div>
+</footer>
+<!-- Bootstrap core JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS -->
+<script src="{% static 'js/scripts.js' %}"></script>
+
+</body>
 </html>
