--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -1,28 +1,53 @@
 {% extends 'core/base.html' %}
-{% block bloque_header %}
-{% if request.GET.next %}
-    <p>Debes estar logeado para acceder a esa pagina</p>
-{% else %}
-    <p>Bienvenido a la página de inicio de sesión.</p>
-{% endif %}
+{% block bloque_estilos %}
+<style>
+    .container {
+        text-align: center;
+    }
 
+    .form-group.row {
+        margin-bottom: 15px;
+    }
+</style>
+
+{% endblock bloque_estilos %}
+{% block bloque_header %}
+    <div class="container text-center mt-4">
+        {% if request.GET.next %}
+            <div class="alert alert-warning" role="alert">
+                Debes estar logeado para acceder a la página: <strong>{{ request.GET.next }}</strong>
+            </div>
+        {% else %}
+            <div class="alert alert-info" role="alert">
+                Bienvenido a la página de inicio de sesión.
+            </div>
+        {% endif %}
+    </div>
 {% endblock bloque_header %}
 
 {% block bloque_contenido %}
+    <div class="container mt-4">
+        <h1 class="text-center">Login</h1>
 
-    <div class="container">
-        <h1 class="mt-4">Login</h1>
+        <form method="post" class="mt-4" style="max-width: 400px; margin: 0 auto; border: 1px solid #f0f0f0; padding: 20px; background-color: #fdfdfd;">
+            {% csrf_token %}
+            <div class="form-group row">
+                <label for="{{ form.username.id_for_label }}" class="col-sm-4 col-form-label text-right">Usuario:</label>
+                <div class="col-sm-8">
+                    {{ form.username }}
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="{{ form.password.id_for_label }}" class="col-sm-4 col-form-label text-right">Contraseña:</label>
+                <div class="col-sm-8">
+                    {{ form.password }}
+                </div>
+            </div>
+            <input type="hidden" name="next" value="{% url 'core:home' %}">
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                <a href="{% url 'core:home' %}" class="btn btn-secondary">Cancelar</a>
+            </div>
+        </form>
     </div>
-
-    <form method="post">
-        {% csrf_token %}
-        <div class="form-group">
-        {{ form.as_p }}
-        <input type="hidden" name="next" value="{% url 'core:home' %}">
-    </div>
-        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-        <a href="{% url 'core:home' %}" class="btn btn-secondary">Cancelar</a>
-    </form>
-
-
 {% endblock bloque_contenido %}
