--- a/usuarios/templates/usuarios/logout.html
+++ b/usuarios/templates/usuarios/logout.html
@@ -1,8 +1,20 @@
 {% extends 'core/base.html' %}
+{% load static %}
+
 {% block titulo %}
     Logout
 {% endblock titulo %}
+
 {% block bloque_contenido %}
-    <h1 class="display-4">Gracias por tu visita de hoy {{ request.user.first_name }}</h1>
-    <h2 class="display-3">Te esperamos nuevamente</h2>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <img src="{% static 'assets/img/thankyou.jpeg' %}" class="img-fluid" alt="Gracias por tu visita">
+                <div class="position-absolute top-50 start-50 translate-middle">
+                    <h1 class="display-4 mt-4">¡Gracias por visitarnos hoy, {{ request.user.first_name }}!</h1>
+                    <p class="lead">Te esperamos nuevamente pronto.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock bloque_contenido %}
