Creacion de README y de usuarios

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,7 +30,7 @@
             height: 80px"
      class="navbar navbar-expand-lg navbar-light ">
   <div class="container-fluid">
-    <a class="navbar-brand px-5 " href="{% url 'core:home' %}">Mis Contenidos</a>
+    <a class="navbar-brand px-5 " href="{% url 'core:home' %}">Nuestros viajes</a>
     <button class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -82,9 +82,6 @@
             <ul class="dropdown-menu">
               <li>
                 <a class="dropdown-item" href="{% url 'usuarios:ver_perfil' %}">Ver perfil</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Editar perfil</a>
               </li>
               <li>
                 <hr class="dropdown-divider">
