--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -13,7 +13,8 @@
                                 ¡Bienvenido!
                             {% endif %}
                         {% else %}
-                            Sistema de administración de contenido
+                            Viajar es un placer!!!!! 
+                            Y aqui te conectamos con viajeros de todos el mundo
                         {% endif %}
                     </h1>
                 </div>
