--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -133,6 +133,9 @@
     <p class="m-0 text-center text-white">Copyright &copy; Mariano Pisano - Entrega Final (2024)</p>
   </div>
 </footer>
+{% block bloque_scripts %}
+  
+{% endblock bloque_scripts %}
 <!-- Bootstrap core JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS -->
