--- a/usuarios/templates/usuarios/logout.html
+++ b/usuarios/templates/usuarios/logout.html
@@ -13,6 +13,10 @@
                 <div class="position-absolute top-50 start-50 translate-middle">
                     <h1 class="display-4 mt-4">¡Gracias por visitarnos hoy, {{ request.user.first_name }}!</h1>
                     <p class="lead">Te esperamos nuevamente pronto.</p>
+                    <div class="mt-4">
+                        <a href="{% url 'core:home' %}" class="btn btn-primary me-2">Ir a la página principal</a>
+                        <a href="{% url 'usuarios:login' %}" class="btn btn-secondary">Ir a la página de login</a>
+                    </div>
                 </div>
             </div>
         </div>
