--- a/posteos/templates/posteos/posteo_form.html
+++ b/posteos/templates/posteos/posteo_form.html
@@ -15,6 +15,6 @@
         </form>
     </div>
     <div class="fs-3 pb-4">
-        <a class="btn btn-primary" href="{% url 'posteos:home' %}">Volver a Clientes</a>
+        <a class="btn btn-primary" href="{% url 'posteos:home' %}">Volver a Posteos</a>
     </div>
 {% endblock bloque_contenido %}
