--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -26,7 +26,7 @@
             height: 100%;
         }
         .masthead {
-            background: url('{% static "path/to/your/image.jpg" %}') no-repeat center center;
+            background: url('{% static "assets/img/7489233.jpg" %}') no-repeat center center;
             background-size: cover;
             height: calc(100vh - 80px - 80px); /* Ajusta esto según la altura del navbar y del footer */
         }
