--- a/posteos/templates/posteos/posteo_detail.html
+++ b/posteos/templates/posteos/posteo_detail.html
@@ -1,8 +1,50 @@
 {% extends 'core/base.html' %}
 {% load static %}
+
 {% block bloque_titulo %}
-    Ver una publicacion
+    Ver una publicación
 {% endblock bloque_titulo %}
+{% block bloque_estilos %}
+<style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .contenido-con-footer {
+        min-height: calc(100vh - 200px); /* Ajustar según la altura del header y footer */
+        padding-bottom: 50px; /* Añade espacio al final del contenido */
+    }
+
+    .post {
+        background-size: cover;
+        background-position: center;
+    }
+
+    .btn-danger {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #dc3545;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+
+    .btn-danger:hover {
+        background-color: #c82333;
+    }
+
+    .d-flex {
+        display: flex;
+    }
+
+    .justify-content-end {
+        justify-content: flex-end;
+    }
+</style>
+{% endblock bloque_estilos %}
 {% block bloque_header %}
     <header class="post" style="background-image: url('{{ object.imagen.url }}')">
         <div class="container position-relative px-4 px-lg-5">
@@ -24,12 +66,19 @@
 <!-- Post Content -->
 {% block bloque_contenido %}
     <article class="mb-4">
-        <div class="container px-4 px-lg-5">
+        <div class="container px-4 px-lg-5 contenido-con-footer">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     {{ object.contenido | safe }}
+                    {% if object.autor == request.user %}
+                    <div class="d-flex justify-content-end">
+                        <a href="{% url 'posteos:confirmar_eliminacion' object.id %}" class="btn btn-danger mt-3">Eliminar</a>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </article>
 {% endblock bloque_contenido %}
+
+
